# autosearch-dpdk

./: .autoforge.toml  .gitignore  .gitmodules  .markdownlint-cli2.yaml  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  failures.tsv  program.md  pyproject.toml  results.tsv
.claude/agents/: autoresearch-code-reviewer.md  markdown-doc-reviewer.md
.github/workflows/: ci.yml
autoforge/: campaign.py  config.py  logging_config.py
autoforge/agent/: __init__.py  campaign.py  cli.py  doctor.py  git_ops.py  hints.py  history.py  judge.py  loop.py  metric.py  project.py  protocol.py  sprint.py  strategy.py  summarize.py  sysinfo.py
autoforge/perf/: __init__.py  analyze.py  arch.py  diff.py  gate.py  profile.py
autoforge/plugins/: __init__.py  (+2 more)
autoforge/runner/: __init__.py  base.py  protocol.py  pyproject.toml  service.py
autoforge_dpdk/: __init__.py  builder.py  deployer.py  tester.py
config/: campaign.toml  campaign.toml.example  runner.toml.example
docs/: agent.md  plugin-sdk.md  runner.md
requests/: 0001_2026-03-24_20-59-33.208939+00-00.json  0001_2026-03-24_22-46-40.742122+00-00.json  0002_2026-03-23T22-00-00.json  0002_2026-03-24_21-07-47.540053+00-00.json  0002_2026-03-24_23-59-10.077797+00-00.json  0003_2026-03-23T23-00-00.json  0003_2026-03-24_21-13-05.000531+00-00.json  0003_2026-03-25_00-49-10.626681+00-00.json  0004_2026-03-24_21-16-54.645470+00-00.json  0004_2026-03-25_01-11-21.767717+00-00.json  0005_2026-03-23T23-45-00.json  0005_2026-03-24_21-22-14.672527+00-00.json  0005_2026-03-25_01-15-05.415951+00-00.json  0006_2026-03-23T23-50-00.json  0006_2026-03-25_01-18-10.281635+00-00.json  0007_2026-03-24T00-00-00.json  0007_2026-03-25_01-23-06.352377+00-00.json  0008_2026-03-25_01-28-24.391182+00-00.json  0009_2026-03-25_01-33-10.477721+00-00.json  0010_2026-03-25_01-35-35.280771+00-00.json  0011_2026-03-25_01-37-20.119090+00-00.json  0012_2026-03-25_01-41-25.597162+00-00.json  0014_2026-03-25_02-32-09.075400+00-00.json  0015_2026-03-25_02-34-17.102823+00-00.json  0016_2026-03-25_02-37-55.945323+00-00.json  0017_2026-03-25_02-43-56.298645+00-00.json  0018_2026-03-25_02-47-48.510667+00-00.json  0019_2026-03-25_02-50-32.984991+00-00.json  0020_2026-03-25_02-53-35.969113+00-00.json  0022_2026-03-25_02-59-48.113171+00-00.json  0023_2026-03-25_03-03-59.108480+00-00.json  0024_2026-03-25_03-06-43.160804+00-00.json  0025_2026-03-25_03-09-58.154051+00-00.json  0026_2026-03-25_03-12-53.732186+00-00.json  0027_2026-03-25_03-15-59.714180+00-00.json  0028_2026-03-25_04-10-20.848637+00-00.json  0029_2026-03-25_04-13-54.554984+00-00.json  0030_2026-03-25_10-56-33.240768+00-00.json  0031_2026-03-25_11-00-34.882884+00-00.json  0032_2026-03-25_11-02-54.520653+00-00.json  (+12 more)
scripts/: setup-sudo.sh
tests/: test_agent_judge.py  test_agent_protocol.py  test_build.py  test_build_local.py  test_build_local_server.py  test_campaign.py  test_cli.py  test_config.py  test_deploy_local.py  test_doctor.py  test_dts_execution.py  test_execute.py  test_git_ops.py  test_hints.py  test_history.py  test_integration.py  test_logging_config.py  test_loop.py  test_metric.py  test_perf_analyze.py  test_perf_diff.py  test_perf_gate.py  test_perf_profile.py  test_perf_record_profiler.py  test_plugin_loader.py  test_project.py  test_runner_base.py  test_runner_protocol.py  test_runner_service.py  test_schema.py  test_sprint.py  test_strategy.py  test_summarize.py  test_sysinfo.py  test_testpmd.py  test_testpmd_execution.py  test_vllm_plugins.py
(+259 files in other folders)
