[project]
name = "autosearch-dpdk"
version = "0.1.0"
description = "Iterative DPDK optimization via two-system architecture"
requires-python = ">=3.13"
dependencies = [
    # Required by DPDK meson build (dpdk/buildtools/pmdinfogen.py) — the runner
    # executes meson inside this venv, so pyelftools must be available here.
    "pyelftools>=0.31",
]

[project.scripts]
autosearch = "src.agent.cli:main"
autosearch-loop = "src.agent.loop:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "pytest>=8.0",
    "ruff>=0.9.0",
]
