[project]
name = "autoforge"
version = "0.2.0"
description = "Plugin-based iterative optimization framework"
requires-python = ">=3.13"
dependencies = [
    # Required by DPDK meson build (dpdk/buildtools/pmdinfogen.py) — the runner
    # executes meson inside this venv, so pyelftools must be available here.
    "pyelftools>=0.31",
]

[project.scripts]
autoforge = "autoforge.agent.cli:main"
autoforge-loop = "autoforge.agent.loop:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["autoforge"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "pre-commit>=4.5",
    "pytest>=8.0",
    "ruff>=0.15.6",
]
